--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_021.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/ROL_021.cshtml
@@ -36,19 +36,19 @@
 
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="IdRubro">Sucursal</label>
+                            <label for="IdSucursal">Sucursal</label>
                             @Html.Partial("_CmbSucursal_reportes_RRHH", Model.IdSucursal)
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="IdRubro">Division</label>
+                            <label for="IdDivision">Division</label>
                             @Html.Partial("_CmbDivision_reportes", Model.IdDivision)
                         </div>
                     </div>
                     <div class="col-md-3">
                         <div class="form-group">
-                            <label for="IdRubro">Area</label>
+                            <label for="IdArea">Area</label>
                             @Html.Partial("_CmbArea_reportes",Model.IdArea)
                         </div>
                     </div>
