--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_CmbEmpleado_Jornada.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_CmbEmpleado_Jornada.cshtml
@@ -7,7 +7,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "Jornada", Action = "CmbEmpleado_Jornada", Area = "RRHH" };
+        settings.CallbackRouteValues = new { Controller = "Empleado", Action = "CmbEmpleado_Jornada", Area = "RRHH" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "pe_nombreCompleto";
@@ -23,7 +23,7 @@
         settings.Properties.FilterMinLength = 3;
 
     })
-    .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.JornadaController().get_list_bajo_demanda, new Core.Erp.Web.Areas.RRHH.Controllers.JornadaController().get_info_bajo_demanda)
+    .BindList(new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoController().get_list_bajo_demanda, new Core.Erp.Web.Areas.RRHH.Controllers.EmpleadoController().get_info_bajo_demanda)
     .Bind((Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_jornada_Info) || Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_empleado_x_jornada_Info) || Model.GetType() == typeof(List<Core.Erp.Info.RRHH.ro_empleado_x_jornada_Info>)) ? "" : Model);
 
 }
