--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -796,7 +796,7 @@
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="">Detalle</label>
-                                @Html.Action("GridViewPartial_empleado_jornada_det", new { Area = "RRHH", Controller = "Jornada" })
+                                @Html.Action("GridViewPartial_empleado_jornada_det")
                             </div>
                         </div>
                     </div>
