--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/_GridViewPartial_LiquidacionTarjetaCredito.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/_GridViewPartial_LiquidacionTarjetaCredito.cshtml
@@ -81,7 +81,7 @@
             c.Settings.AllowSort = DefaultBoolean.False;
             c.Width = Unit.Pixel(150);
         });
-        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(30);
+        settings.Columns.Add("Su_Descripcion", "Sucursal").Width = Unit.Percentage(25);
         settings.Columns.Add("IdLiquidacion", "ID").Width = Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
@@ -90,7 +90,8 @@
             column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
             column.Width = Unit.Percentage(10);
         });
-        settings.Columns.Add("ba_descripcion", "Banco").Width = Unit.Percentage(30);
+        settings.Columns.Add("Lote", "Lote").Width = Unit.Percentage(10);
+        settings.Columns.Add("ba_descripcion", "Banco").Width = Unit.Percentage(25);
         settings.Columns.Add(column =>
         {
             column.FieldName = "Valor";
