--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/_GridViewPartial_LiquidacionTarjetaCredito.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/_GridViewPartial_LiquidacionTarjetaCredito.cshtml
@@ -18,6 +18,7 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
 
 
+
         //Configuración scrolling y pager
         settings.Settings.HorizontalScrollBarMode = ScrollBarMode.Hidden;
         settings.Settings.VerticalScrollBarMode = ScrollBarMode.Visible;
@@ -52,7 +53,7 @@
         //Evento para pintar de rojo las filas anuladas
         settings.HtmlRowPrepared = (s, e) =>
         {
-            if (Convert.ToString(e.GetValue("Estado")) == "I")
+            if (Convert.ToBoolean(e.GetValue("Estado")) == false)
             {
                 e.Row.ForeColor = System.Drawing.Color.Red;
             }
