--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_CmbTipoNomina.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_CmbTipoNomina.cshtml
@@ -15,11 +15,10 @@
         settings.Properties.ValueType = typeof(int);
         settings.Properties.Columns.Add("IdNomina_Tipo", "ID", 5);
         settings.Properties.Columns.Add("Descripcion", "Tipo de nómina", 65);
-        settings.Properties.FilterMinLength = 3;
 
-        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
-        settings.Properties.NullText = "== Seleccione ==";
-        settings.Properties.AllowNull = true;
+        //settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+        //settings.Properties.NullText = "== Seleccione ==";
+        //settings.Properties.AllowNull = true;
     })
      .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.RRHHReportesController().get_list_bajo_demanda_tiponomina, new Core.Erp.Web.Areas.Reportes.Controllers.RRHHReportesController().get_info_bajo_demanda_tiponomina)
     .Bind((Model.GetType() == typeof(Core.Erp.Info.Helps.cl_filtros_Info) || Model.GetType() == typeof(Core.Erp.Info.RRHH.ro_nomina_tipo_Info)) ? "" : Model);
