--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/Factura/_GridViewPartial_factura.cshtml
@@ -67,20 +67,20 @@
             c.Caption = "#";
             c.SetDataItemTemplateContent(tc =>
             {
-                //if (string.IsNullOrEmpty(Convert.ToString(DataBinder.Eval(tc.DataItem, "vt_autorizacion"))) && Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                if (string.IsNullOrEmpty(Convert.ToString(DataBinder.Eval(tc.DataItem, "vt_autorizacion"))) && Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
                 {
                     ViewContext.Writer.Write(
                     Html.ActionLink("Modificar", "Modificar", new  { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") }) + "&nbsp;" +
                         Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") },
                             new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
                     );
-                    //}else
-                    //     if (!string.IsNullOrEmpty(Convert.ToString(DataBinder.Eval(tc.DataItem, "vt_autorizacion"))) && Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
-                    //{
-                    //    ViewContext.Writer.Write(
-                    //        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") },
-                    //            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    //    );
+                }else
+                         if (!string.IsNullOrEmpty(Convert.ToString(DataBinder.Eval(tc.DataItem, "vt_autorizacion"))) && Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A")
+                {
+                    ViewContext.Writer.Write(
+                        Html.ActionLink("Anular", "Anular", new { IdEmpresa = DataBinder.Eval(tc.DataItem, "IdEmpresa"), IdSucursal = DataBinder.Eval(tc.DataItem, "IdSucursal"), IdBodega = DataBinder.Eval(tc.DataItem, "IdBodega"), IdCbteVta = DataBinder.Eval(tc.DataItem, "IdCbteVta") },
+                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
+                    );
                 }
             });
             c.SetHeaderTemplateContent(tc =>
