--- a/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/_GridViewPartial_LiquidacionTarjetaCredito.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorCobrar/Views/LiquidacionTarjetaCredito/_GridViewPartial_LiquidacionTarjetaCredito.cshtml
@@ -110,6 +110,15 @@
 
             });
         });
+        settings.Columns.Add(column =>
+        {
+            column.Caption = "";
+            column.SetDataItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("CXC_007", "CuentasPorCobrarReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdSucursal = DataBinder.Eval(c.DataItem, "IdSucursal"), IdLiquidacion = DataBinder.Eval(c.DataItem, "IdLiquidacion") }, Request.Url.Scheme) + "');\"></span>");
+            });
+            column.Width = Unit.Percentage(5);
+        });
     });
 }
 @grid.Bind(Model).GetHtml()
