--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_CmbTipoNomina.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_CmbTipoNomina.cshtml
@@ -16,7 +16,7 @@
         settings.Properties.Columns.Add("IdNomina_Tipo", "ID", 5);
         settings.Properties.Columns.Add("Descripcion", "Tipo de nómina", 65);
 
-        //settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
+        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         //settings.Properties.NullText = "== Seleccione ==";
         //settings.Properties.AllowNull = true;
     })
