--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_CmbArea_reportes.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_CmbArea_reportes.cshtml
@@ -15,6 +15,7 @@
         settings.Properties.ValueType = typeof(int);
         settings.Properties.Columns.Add("IdArea", "ID", 10);
         settings.Properties.Columns.Add("Descripcion", "Descripcion", 90);
+        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
         settings.Properties.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['IdDivision'] = IdDivision.GetValue(); }";
 
     })
