--- a/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_CmbDivision_reportes.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Reportes/Views/RRHHReportes/_CmbDivision_reportes.cshtml
@@ -15,6 +15,7 @@
         settings.Properties.ValueType = typeof(int);
         settings.Properties.Columns.Add("IdDivision", "ID", 10);
         settings.Properties.Columns.Add("Descripcion", "Descripción", 90);
+        settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Always;
     })
       .BindList(new Core.Erp.Web.Areas.Reportes.Controllers.RRHHReportesController().get_list_bajo_demanda_division, new Core.Erp.Web.Areas.Reportes.Controllers.RRHHReportesController().get_info_bajo_demanda_division)
     .Bind(Model.GetType() == typeof(Core.Erp.Info.Helps.cl_filtros_Info) ? "" : (Model == 0 ? "" : Model));
