--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_CmbSucursal.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/EmpleadoNovedad/_CmbSucursal.cshtml
@@ -6,7 +6,7 @@
         settings.Width = Unit.Percentage(100);
         settings.Properties.DropDownWidth = Unit.Percentage(100);
         settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-        settings.CallbackRouteValues = new { Controller = "RRHHReportes", Action = "CmbSucursal", Area = "Reportes" };
+        settings.CallbackRouteValues = new { Controller = "EmpleadoNovedad", Action = "CmbSucursal", Area = "RRHH" };
         settings.Properties.CallbackPageSize = 15;
         settings.Properties.IncrementalFilteringMode = IncrementalFilteringMode.Contains;
         settings.Properties.TextField = "Su_Descripcion";
